# openai-llm-proxy

./: .gitignore  Makefile  README.md  env.example  main.py  mypy.ini  pyproject.toml
app/: app.py  config.py  errors.py  logging_config.py  middleware.py  models.py  response_formatter.py  router.py
app/common/: errors.py
app/routers/: base.py  external_llm.py
app/services/: base.py
app/services/external_llm/: __init__.py  provider_manager.py  router.py  service.py
app/services/external_llm/providers/: __init__.py  base.py  bedrock.py  custom.py  gemini.py  generic.py  vertex.py
config/: .axample  __init__.py  basic-config.yaml  basic_config.py  config.py
config/external_llm/: external_llm.yaml
logger/: logger.py
test/: test_concurrent.py  test_deepseek_only.py  test_models.py
